--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -19,7 +19,9 @@
     "import pandas as pd\n",
     "\n",
     "# load the csv directly from github\n",
-    "ramphs = pd.read_csv(\"https://raw.githubusercontent.com/sfsheath/roman-amphitheaters/master/roman-amphitheaters.csv\")\n",
+    "#ramphs = pd.read_csv(\"https://raw.githubusercontent.com/sfsheath/roman-amphitheaters/master/roman-amphitheaters.csv\")\n",
+    "\n",
+    "ramphs = pd.read_csv(\"/Users/sfsh/Documents/roman-amphitheaters/roman-amphitheaters.csv\")\n",
     "\n",
     "# confirm that all is well by displaying first two rows\n",
     "ramphs.head(2)\n"
@@ -155,6 +157,63 @@
     "# when you write this to a csv, all cells are usefully filled in. Run that through raw or plotly and see what you can do.\n",
     "# \"Circle Packing\" in raw might work well. Though perhaps try reversing \"modcountry\" and \"chronogrp\".\n",
     "ramphs.groupby((\"modcountry\",\"chronogrp\")).sum().to_csv(\"two-level-sum.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "conn = sqlite3.connect(':memory:')\n",
+    "ramphs.to_sql('ramphs',conn,if_exists=\"replace\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for row in conn.execute(\"SELECT chronogrp FROM ramphs WHERE chronogrp = 'syracuseAmphitheater'\"):\n",
+    "    print(row)\n",
+    "\n",
+    "for row in conn.execute(\"SELECT id,chronogrp FROM ramphs\"):\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "chronogrps = pd.read_csv(\"/Users/sfsh/Documents/roman-amphitheaters/chronogrps.csv\")\n",
+    "chronogrps.head(2)\n",
+    "chronogrps.to_sql('chronogrps', conn, if_exists=\"replace\")\n",
+    "\n",
+    "for row in conn.execute(\"\"\"SELECT id,chronogrps.start \n",
+    "FROM ramphs,chronogrps\n",
+    "WHERE ramphs.chronogrp = chronogrps.chronogrp\n",
+    "ORDER BY chronogrps.start\"\"\"):\n",
+    "    print(row)\n",
+    "    \n",
+    "pd.read_sql(\"\"\"SELECT id,chronogrps.start \n",
+    "FROM ramphs,chronogrps\n",
+    "WHERE ramphs.chronogrp = chronogrps.chronogrp\n",
+    "ORDER BY chronogrps.start\"\"\", conn)\n",
+    "\n",
+    "pd.read_sql(\"\"\"SELECT id,chronogrps.start \n",
+    "FROM ramphs LEFT OUTER JOIN chronogrps \n",
+    "ON ramphs.chronogrp = chronogrps.chronogrp\n",
+    "ORDER BY chronogrps.start\"\"\", conn)"
    ]
   }
  ],
