--- a/pandas-sqlite3.ipynb
+++ b/pandas-sqlite3.ipynb
@@ -64,7 +64,6 @@
     "# https://www.sqlite.org/lang_select.html\n",
     "# https://www.tutorialspoint.com/sqlite/sqlite_select_query.htm\n",
     "\n",
-    "pd.read_sql(\"\"\"SELECT id,title FROM ramphs\"\"\", conn)\n",
     "\n"
    ]
   },
@@ -78,7 +77,7 @@
    "source": [
     "# LIMIT\n",
     "\n",
-    "pd.read_sql(\"\"\"SELECT id,title FROM ramphs LIMIT 10\"\"\", conn)\n",
+    "\n",
     "\n",
     "# WITH OFFSET\n"
    ]
@@ -93,7 +92,6 @@
    "source": [
     "# WHERE clause on one table\n",
     "\n",
-    "pd.read_sql(\"\"\"SELECT id,title FROM ramphs WHERE capacity > 10000 AND capacity < 40000  \"\"\", conn)\n",
     "\n"
    ]
   },
@@ -107,7 +105,6 @@
    "source": [
     "# DISTINCT\n",
     "\n",
-    "pd.read_sql(\"\"\"SELECT DISTINCT modcountry FROM ramphs WHERE capacity > 20000 \"\"\", conn)\n",
     "\n"
    ]
   },
@@ -121,10 +118,6 @@
    "source": [
     "# ORDER BY\n",
     "\n",
-    "pd.read_sql(\"\"\"SELECT DISTINCT modcountry\n",
-    " FROM ramphs\n",
-    " WHERE capacity > 20000 \n",
-    " ORDER BY modcountry \"\"\", conn)\n",
     "\n",
     "\n"
    ]
@@ -537,11 +530,7 @@
    "source": [
     "# RELATIONAL JOINS\n",
     "\n",
-    "pd.read_sql(\"\"\"SELECT ramphs.id, ramphs.chronogrp, chronogrps.start\n",
-    " FROM ramphs, chronogrps\n",
-    " WHERE (ramphs.chronogrp = chronogrps.chronogrp)\n",
-    "     AND ( chronogrps.start >= 100 AND chronogrps.end <= 200 )\n",
-    " ORDER BY chronogrps.start\"\"\", conn)\n"
+    "pd.read_sql(\"\"\"\"\"\", conn)\n"
    ]
   },
   {
