--- a/pandas-sql-ramphs-combine-colums.ipynb
+++ b/pandas-sql-ramphs-combine-colums.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quick demo of loading from a Google Sheet that has been 'published to web'. Once loaded, pd.concat() is used to combine columns that hold similar information."
+    "Quick demo of loading from a Google Sheet that has been 'published to web'. Once loaded, pd.concat() is used to combine columns that hold similar information.\n",
+    "\n",
+    "DATA IS VERY INCOMPLETE. See http://github.com/sfsheath/roman-amphitheaters for more info."
    ]
   },
   {
