--- a/pandas-sql-ramphs-combine-colums.ipynb
+++ b/pandas-sql-ramphs-combine-colums.ipynb
@@ -63,6 +63,7 @@
     "# create two pandas.Series variables ...\n",
     "provinces    = ramphs['province'].dropna()\n",
     "italyregions = ramphs['italyregion'].dropna()\n",
+    "# in the above, .dropna() gets rid of incomplete data. Very useful.\n",
     "\n",
     "# ... then combine them\n",
     "regions = pd.concat((provinces,italyregions))\n",
