--- a/pandas-sql-ramphs-combine-colums.ipynb
+++ b/pandas-sql-ramphs-combine-colums.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "# load csv file from a google sheet\n",
+    "# load amphitheater csv file from a google sheet\n",
     "\n",
     "ramphs = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1XRRe-74Gxb-YErNldbPP9VW1IARH-JsWXIHMLnyZhfc/pub?output=csv\")\n",
     "\n",
