--- a/pandas-sql-ramphs-combine-colums.ipynb
+++ b/pandas-sql-ramphs-combine-colums.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load from Google, Combine colums"
+    "# Load from Google, Combine columns"
    ]
   },
   {
